<resources>
    <string name="app_name">ABFitness</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Me">Me</string>
    <string name="meal_plan">Meal plan for today</string>
    <string name="news">News</string>
    <string name="feedback">Feedback</string>
    <string name="sign_out">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="action_save">Save</string>
    <string name="editor_insert_user_failed">Error with saving user</string>
    <string name="editor_insert_user_successful">Saved successfuly</string>
    <string name="editor_update_user_failed">Failed to update</string>
    <string name="editor_update_user_successful">Updated</string>

    <string name="meal_plan_failed">Please, fill all these fields to get meal plan</string>

    <string name="one_cup">1 cup</string>
    <string name="tofu">Tofu 200cal</string>
    <string name="beans">Beans 245cal</string>
    <string name="peas">Peas 134cal</string>
    <string name="quinoa">Quinoa 218cal</string>
    <string name="nuts">Nuts 800cal</string>
    <string name="seeds">Seeds 721cal</string>
    <string name="cod">Cod 190cal</string>
    <string name="cheese">Cottage cheese 222cal</string>
    <string name="eggs">2 eggs 156cal</string>
    <string name="amaranth">Amaranth 717cal</string>
    <string name="salmon">200gr salmon 427cal</string>
    <string name="mushrooms">Mushrooms 70cal</string>

    <string name="rise">Rise 205cal</string>
    <string name="potato">Sweet Potato 114cal</string>
    <string name="oats">Oats 300cal</string>
    <string name="buckwheat">Buckwheat 180cal</string>
    <string name="lentils">Lentils 230cal</string>
    <string name="chickpeas">Chickpeas 729cal</string>
    <string name="nuts_mix">Nuts mix 800cal</string>
    <string name="pumpkin">Seeds Pumpkin 721cal</string>
    <string name="fruits">Fruits / RAW 45–85cal</string>
    <string name="berries">Berries / RAW 85cal</string>

    <string name="kale">Kale 33</string>
    <string name="lettuce">Lettuce 5cal</string>
    <string name="cucumber">Cucumber 16cal</string>
    <string name="pepper">Pepper 60cal</string>
    <string name="broccoli">Broccoli 30cal</string>
    <string name="brussel">Brussel spr. 38cal</string>
    <string name="cabbage">Cabbage 17cal</string>
    <string name="carrots">Carrots 45cal</string>
    <string name="cauliflower">Cauliflower 27cal</string>
    <string name="celery">Celery 10cal</string>
    <string name="zucchini">Zucchini 19cal</string>
    <string name="spinach">Spinach 7cal</string>
    <string name="tomatoes">Tomatoes 30cal</string>

    <string name="tbps">1 Tbsp</string>
    <string name="olive">Olive Oil 119cal</string>
    <string name="avocado">Avocado 124cal</string>
    <string name="nut_butter">Nut Butter 90cal</string>

    <string name="total_cal_per_day">Total calories per day:</string>
    <string name="recovery_cal">Recovery calories:</string>
    <string name="energy_cal">Energy calories:</string>
    <string name="vitality_cal">Vitality row calories:</string>
    <string name="oil_cal">Oil calories:</string>
    <string name="widget_header">Meal plan help list</string>
    <string name="user_name">userName</string>
    <string name="cat_pic">https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS07uU8m6lCnd3mFEN98OgtbpgstOVp40uKWmr48nAGPsxqKWbB</string>
    <string name="example_email">username@example.com</string>
    <string name="free_enter">Free Enter</string>
    <string name="hint_about_me">About Me</string>
    <string name="hint_name">Name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_basic_data">Basic data</string>
    <string name="hint_age">Age</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_kg">kg</string>
    <string name="hint_height">Height</string>
    <string name="hint_cm">cm</string>
    <string name="meal_plan_help_list">Meal plan help list</string>
    <string name="meal_plan_help_list_not_available">Meal plan help list not available</string>
    <string name="news_header_image">news header image</string>
    <string name="play_button">play button</string>
    <string name="pause_button">pause button</string>
    <string name="welcome_to_ab_fitness">welcome to AB fitness</string>
    <string name="exercise_activity_title">activity</string>
    <string name="warm_up_title">Warm Up</string>
    <string name="workout_title">Work Out</string>
    <string name="cool_down_title">Cool Down</string>
    <string name="main_title">AB Fitness</string>
    <string name="one_cup_contains_string">1 cup contains:</string>
    <string name="one_tbsp_contains_string">1 tbsp contains:</string>
    <string name="meal_plan_title">Meal plan</string>
    <string name="ads_id">ca-app-pub-8604814291061076~6016407965</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner">BANNER</string>


</resources>
