<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/ic_menu_acc_circle"
            android:title="@string/Me" />
        <item
            android:id="@+id/nav_meal_plan"
            android:icon="@drawable/ic_menu_dinner"
            android:title="@string/meal_plan" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_local_library"
            android:title="@string/news" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/btn_sign_out"
                android:icon="@drawable/ic_menu_arrow_back"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
